--- a/style.css
+++ b/style.css
@@ -46,8 +46,9 @@ ul{
 }
 .container{
     max-width: 1180px;
-    margin-inline: 8%;
+    margin-inline: auto;
     padding-inline: var(--padding-inline-section);
+    overflow: hidden;
 }
 .flex{
     display: flex;
@@ -60,7 +61,7 @@ ul{
     color: var(--accent-color);
     transition: 0.2s ease-out;
 }
-.primary-button{
+.primary-button{ 
     background-color: var(--accent-color);
     border-radius: 6px;
     font-weight: 700;
@@ -68,6 +69,7 @@ ul{
     padding: 12px 24px;
     box-shadow: 0 0 2px var(--secondary-text-color);
     transition: 0.2s ease-out;
+    text-align: center;
 }
 .primary-button:hover{
     background-color: var(--accent-color-dark);
@@ -107,6 +109,7 @@ ul{
 .main-nav{
     margin-top: 20px;
     justify-content: space-between;
+    position: relative;
 }
 .company-logo img{
     width: 200px;
@@ -120,7 +123,9 @@ ul{
     justify-content: end;
     gap: 25px;
 }
-
+.nav-toggle{
+    display: none;
+}
 
 
 /* header section */
@@ -133,7 +138,7 @@ ul{
     gap: 50px;
 }
 .header-left{
-    max-width: 40vw;
+    width: 40vw;
 }
 .header-left h1{
     margin-top: 20px;
@@ -141,8 +146,11 @@ ul{
 .get-started-button{
     margin: 20px;
 }
+.header-right{
+    width: 60vw;
+}
 .header-right img{
-    width: 500px;
+    width: 100%;
 }
 
 
@@ -155,7 +163,7 @@ ul{
     color: var(--primary-text-color);
 }
 .logos{
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 10px;
 }
@@ -175,6 +183,7 @@ ul{
 
 .features-header {
     text-align: center;
+    margin-bottom: 40px;
 }
 
 .features-header h2{
@@ -217,9 +226,15 @@ ul{
     align-items: flex-start;
 }
 
+#second-big-feature{
+    flex-direction: row-reverse;
+}
+
 
 /* examples section */
-
+.examples-section{
+    padding: 80px var(--padding-inline-section);
+}
 .examples-header {
     flex-direction: column;
     gap: 20px;
@@ -227,12 +242,12 @@ ul{
 .examples-area{
     justify-content: space-between;
     margin-block: 30px;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
 }
 .examples-card{
     width: 23%;
     position: relative;
-    min-height: 300px;
+    height: 300px;
     background: black;
     background: linear-gradient(rgb(0,0,0,0.1), rgb(0,0,0,0.8)), url(./assets/asset\ 36.jpeg);
     background-size: cover;
